Mon Mar 22 10:57:20 2004  Steve Huston  <shuston@riverace.com>

	* ace/SSL/SSL_Asynch_Stream.cpp:
	* ace/SSL/SSL_Asynch_BIO.cpp: Added #include "ace/OS_NS_string.h" to
	  pick up missing symbols on AIX.

Sat Mar 20 22:25:07 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* tests/Multicast_Test.cpp (leave): Replaced 
	
	  size_t size = 0;
  
          with 
  
          size_t size = this->address_vec_.size ();
  
          Thanks to Valery Salamakha <ccapstan@bigpond.net.au>
	  for reporting this!
  
Sat Mar 20 17:01:55 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/Timer_Queue_Adapters.h:
	* ace/Timer_Queue_Adapters.i:

	  Changes from the effect of the following change "Thu Mar 18 
	  22:47:05 2004 Balachandran Natarajan  <bala@dre.vanderbilt.edu>" 

Sat Mar 20 18:45:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* bin/MakeProjectCreator/templates/bor.mpd:
	  When gendir is set, a \ must be added, not a /. This fixes
	  problems in the Borland builds that where caused by the fact
	  that the realclean didn't work and we did compile old generated
	  files.

Sat Mar 20 11:15:19 2004  Olli Savia  <ops@iki.fi>

        * ace/Containers_T.cpp:
        * ace/Containers_T.i:
          Removed unnesessary LynxOS checks. LynxOS's updated compiler can
          handle these files correctly.

Fri Mar 19 08:33:01 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/Creator.pm:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:
        * bin/MakeProjectCreator/templates/em3vcp.mpd:
        * bin/MakeProjectCreator/templates/gnu.mpd:
        * bin/MakeProjectCreator/templates/make.mpd:
        * bin/MakeProjectCreator/templates/vc6dsp.mpd:
        * bin/MakeProjectCreator/templates/vc7.mpd:

          Fixed a bug where a command dependency would be placed upon
          generated files.  The full path to the command is not always
          supplied  during custom definition and thus dependencies couldn't