@@ -1,3 +1,9 @@
+Mon Mar 22 13:45:19 2004  Steve Huston  <shuston@riverace.com>
+
+	* examples/APG/Timers/CB.cpp (handle_timeout): The reset_interval()
+	  call needs to happen whether ACE_NDEBUG or not; putting it in an
+	  ACE_ASSERT no-ops it out if ACE_NDEBUG.
+
 Mon Mar 22 10:57:20 2004  Steve Huston  <shuston@riverace.com>
 
 	* ace/SSL/SSL_Asynch_Stream.cpp:
